# website

./: .eslintrc.js  .prettierignore  .prettierrc.js  LICENSE  components.json  flake.nix  next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json
ansible/: hosts.yaml  site.yaml
ansible/group_vars/: all
app/: layout.tsx  not-found.tsx  page.tsx
app/apps/: page.tsx
app/gametools/: page.tsx
app/miniatures/: page.tsx
app/projects/: page.tsx
app/resume/: page.tsx
backend/: Cargo.toml  Rocket.toml
backend/src/: cors.rs  main.rs
backend/src/gql/: pinned_repos.graphql  pinned_repos.rs  routes.rs
components/: diagonal-wrapper.tsx  diagonalWrapper.js  diagonalWrapper.tsx  hero.js  hero.tsx  home-page.tsx  layout.js  layout.module.css  layout.tsx  nav.js  nav.module.css  nav.tsx  repo-row.tsx  repoRow.js  repoRow.module.css  repoRow.tsx
components/resume/: card.js  card.tsx  sections.tsx
components/ui/: dialog.tsx  select.tsx
data/: project.json
frontend/: .gitignore  elm.json  package.json
frontend/src/: Decoder.elm  Decoders.elm  Main.elm  Model.elm  Update.elm  (+1 more)
lib/: features.js  posts.js  projects.js  projects.ts  utils.js
pages/: 404.js  404.tsx  _app.tsx  _document.js  _document.tsx  apps.tsx  gametools.js  gametools.tsx  index.js  index.tsx  projects.js  projects.tsx  resume.js  resume.tsx
scripts/: get-content.js  getContent.js
site/: .eslintrc.js  package-lock.json  package.json  tailwind.config.js
styles/: index.css
typings/: contentful.d.ts  external.d.ts  github.d.ts  json.d.ts
(+138 files in other folders)
