[package]
name = "backend"
version = "0.1.0"
authors = ["Milo Gertjejansen <milo@milogert.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
juniper = "0.11"
juniper_rocket = "0.2.0"
hyper = "0.11"
tokio-core = "0.1"
futures = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = "0.9.18"
failure = "*"
graphql_client = "0.8.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]
